Fixed hero h3 alignment.

--- a/style.css
+++ b/style.css
@@ -370,6 +370,7 @@ div#about-container:first-child {
   }
 
   #hero h3 {
+    left: 12%;
     font-size: 4vw;
   }
 
